...
      return (
        <DropdownMenu className="flex-1">
          <View className="relative w-full flex-row items-center">
            <DropdownMenuTrigger asChild>
              <Input
                ref={ref}
                placeholder="Search caches..."
                className={cn("w-full", className)}
                inputMode="text"
                style={{ paddingLeft: 36 }}
                onLayout={onInputLayout}
                value={value}
                onChangeText={(v) => setValue(v)}
...
