...
]

const dummyUser: User = {
  id: "123k", // Firebase user id
  email: "john.doe@example.com",
  createdAt: new Date("2023-01-01T00:00:00.000Z"),
  displayName: "John Doe",
  description:
    "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse non mattis lorem. Nam ornare scelerisque imperdiet.",
  avatar: dummyAvatar,
  banner: dummyBanner,
  settings: {
    notifications: true,
...
