#flow: Login
#intent:
# Open up our app and use the dummy user credentials to login

appId: com.xplorify # the app id of the app we want to test
# You can find the appId of an Ignite app in the `app.json` file
# as the "package" under the "android" section and "bundleIdentifier" under the "ios" section
---
- clearState # clears the state of our app (navigation and authentication)
- launchApp # launches the app
- assertVisible: "Welcome back!"
- tapOn: "Enter your email"
- inputText: "john.doe@example.com"
- tapOn: "Enter your password"
- inputText: "Test12345!"
- assertVisible: "Log in"
- tapOn: "Log in"

