#flow: Stay logged in after closing the app
#intent:
# Open up our app and use the dummy user credentials to login
# Upon restarting the app, user should be logged in.

appId: com.xplorify
---
- clearState # clears the state of our app (navigation and authentication)
- launchApp # launches the app
- assertVisible:
    text: "Welcome back!"
    optional: true
- assertVisible:
    text: "Email"
    optional: true
- tapOn:
    text: "Enter your email"
- inputText: "john.doe@example.com"
- assertVisible:
    text: "Password"
    optional: true
- tapOn:
    text: "Enter your password"
- inputText: "Test12345!"
- assertVisible:
    text: "Log in"
    optional: true
- tapOn:
    text: "Log in"
- assertVisible:
    text: "Search caches..."
    optional: true
- stopApp
- launchApp
- assertVisible:
    text: "Search caches..."
    optional: true
